<resources>
    <string name="app_name">MovieApp</string>
    <string name="text_vote_common">/10</string>
    <string name="text_rate_this">Rate this</string>
    <string name="text_metascore">Metascore</string>
    <string name="text_plot_summary">Plot Summary</string>
    <string name="text_cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="text_search_tv_movie">Search movie</string>
</resources>